fix: overflow y

--- a/styles/giraflor-giraFriday.scss
+++ b/styles/giraflor-giraFriday.scss
@@ -15,6 +15,7 @@ body {
   }
 
   &.gf24-day {
+    overflow-y: hidden;
     pointer-events: none;
   }
 
